--- a/css/style.css
+++ b/css/style.css
@@ -1322,3 +1322,11 @@ checked {
     transform: scale(1);
   }
 }
+
+
+.sidebar-export {
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	z-index: 999;
+}
